# clion_inlay_hint

./: CMakeLists.txt  README.md  main.cpp
parameters/: constructor.cpp  enum.cpp  hint.cpp  index.cpp  reference.cpp
types/: lambdas.cpp  parameter.cpp  return.cpp  template.cpp  variable.cpp
